--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
         "css-mqpacker": "^7.0.0",
         "cssnano": "^4.1.10",
         "file-loader": "^6.0.0",
+        "handlebars": "^4.7.4",
+        "handlebars-loader": "^1.7.1",
+        "handlebars-webpack-plugin": "^1.8.1",
         "html-webpack-plugin": "^4.0.3",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.13.1",
-        "panini": "^1.6.3",
         "path": "^0.12.7",
         "postcss-loader": "^3.0.0",
         "sass-loader": "^8.0.2",
